--- a/frontend/src/styles/_variables.scss
+++ b/frontend/src/styles/_variables.scss
@@ -1,3 +1,6 @@
 $for-medium-up: 770px;
+$for-short-up: 430px;
 $drawer-height: 5rem;
 $nav-height: 4.5rem;
+$nav-margin: 2rem;
+$nav-size: $nav-height + $nav-margin;
